--- a/colab_finetune.ipynb
+++ b/colab_finetune.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Fine-Tune Qwen3-8B for Financial Extraction (Colab)\n",
     "\n",
-    "This notebook fine-tunes Qwen3-8B-Instruct using QLoRA and Unsloth for structured financial entity extraction from SEC 10-K reports.\n",
+    "Fine-tunes Qwen3-8B-Instruct using QLoRA for SEC 10-K extraction.\n",
     "\n",
-    "**Requirements**: T4 GPU (free tier) or A100 (Colab Pro)"
+    "**Features**: Custom loss, `/no_think` mode, **saves merged model for MLX**"
    ]
   },
   {
@@ -25,18 +25,16 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "!pip install unsloth\n",
-    "!pip install --no-deps trl peft accelerate bitsandbytes\n",
-    "!pip install datasets pydantic loguru"
+    "%pip install unsloth\n",
+    "%pip install --no-deps trl peft accelerate bitsandbytes\n",
+    "%pip install datasets pydantic loguru"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Upload Training Data\n",
-    "\n",
-    "Upload your `train.jsonl` file or clone your repo."
+    "## 2. Clone Repository"
    ]
   },
   {
@@ -45,20 +43,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Option A: Clone your GitHub repo\n",
     "!git clone https://github.com/ineedmoney527/fine-tuning-sec-fillings.git\n",
-    "%cd fine-tuning-sec-fillings\n",
-    "\n",
-    "# Option B: Upload manually (uncomment below)\n",
-    "# from google.colab import files\n",
-    "# uploaded = files.upload()  # Upload train.jsonl"
+    "%cd fine-tuning-sec-fillings"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Load Model with Unsloth"
+    "## 3. Load Model"
    ]
   },
   {
@@ -70,26 +63,23 @@
     "from unsloth import FastLanguageModel\n",
     "from unsloth.chat_templates import get_chat_template\n",
     "\n",
-    "# Configuration\n",
     "MODEL_NAME = \"unsloth/Qwen3-8B-Instruct-unsloth-bnb-4bit\"\n",
     "MAX_SEQ_LENGTH = 8192\n",
     "\n",
-    "# Load model with 4-bit quantization\n",
     "model, tokenizer = FastLanguageModel.from_pretrained(\n",
     "    model_name=MODEL_NAME,\n",
     "    max_seq_length=MAX_SEQ_LENGTH,\n",
-    "    dtype=None,  # Auto-detect\n",
+    "    dtype=None,\n",
     "    load_in_4bit=True,\n",
     ")\n",
-    "\n",
-    "print(f\"Model loaded: {MODEL_NAME}\")"
+    "print(f\"Loaded: {MODEL_NAME}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Configure LoRA Adapters"
+    "## 4. Configure LoRA"
    ]
   },
   {
@@ -98,34 +88,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add LoRA adapters\n",
     "model = FastLanguageModel.get_peft_model(\n",
-    "    model,\n",
-    "    r=16,              # LoRA rank\n",
-    "    lora_alpha=32,     # Scaling factor\n",
-    "    lora_dropout=0.05,\n",
-    "    target_modules=[\n",
-    "        \"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\",\n",
-    "        \"gate_proj\", \"up_proj\", \"down_proj\"\n",
-    "    ],\n",
-    "    bias=\"none\",\n",
-    "    use_gradient_checkpointing=\"unsloth\",\n",
-    "    random_state=42,\n",
+    "    model, r=16, lora_alpha=32, lora_dropout=0.05,\n",
+    "    target_modules=[\"q_proj\", \"k_proj\", \"v_proj\", \"o_proj\", \"gate_proj\", \"up_proj\", \"down_proj\"],\n",
+    "    bias=\"none\", use_gradient_checkpointing=\"unsloth\", random_state=42,\n",
     ")\n",
-    "\n",
-    "# Set up chat template\n",
     "tokenizer = get_chat_template(tokenizer, chat_template=\"qwen-2.5\")\n",
-    "if tokenizer.pad_token is None:\n",
-    "    tokenizer.pad_token = tokenizer.eos_token\n",
-    "\n",
-    "print(\"LoRA adapters configured\")"
+    "if tokenizer.pad_token is None: tokenizer.pad_token = tokenizer.eos_token\n",
+    "print(\"LoRA configured\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Load Training Data"
+    "## 5. Load Data"
    ]
   },
   {
@@ -137,24 +114,23 @@
     "import json\n",
     "from datasets import Dataset\n",
     "\n",
-    "# Load JSONL data\n",
-    "DATA_PATH = \"data/train.jsonl\"  # Adjust path if needed\n",
+    "data = [json.loads(line) for line in open(\"data/train.jsonl\") if line.strip()]\n",
     "\n",
-    "data = []\n",
-    "with open(DATA_PATH, 'r') as f:\n",
-    "    for line in f:\n",
-    "        if line.strip():\n",
-    "            data.append(json.loads(line))\n",
+    "formatted_data = []\n",
+    "for ex in data:\n",
+    "    messages = [{'role': m['role'], 'content': m['content'] + ' /no_think' if m['role']=='user' else m['content']} for m in ex['messages']]\n",
+    "    text = tokenizer.apply_chat_template(messages, tokenize=False, add_generation_prompt=False)\n",
+    "    formatted_data.append({\"text\": text})\n",
     "\n",
-    "dataset = Dataset.from_list([{\"messages\": ex[\"messages\"]} for ex in data])\n",
-    "print(f\"Loaded {len(dataset)} training examples\")"
+    "dataset = Dataset.from_list(formatted_data)\n",
+    "print(f\"Loaded {len(dataset)} examples\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Configure Training"
+    "## 6. Custom Trainer"
    ]
   },
   {
@@ -163,54 +139,77 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch\n",
     "from trl import SFTTrainer, SFTConfig\n",
     "\n",
-    "def formatting_func(examples):\n",
-    "    texts = []\n",
-    "    for messages in examples[\"messages\"]:\n",
-    "        text = tokenizer.apply_chat_template(\n",
-    "            messages,\n",
-    "            tokenize=False,\n",
-    "            add_generation_prompt=False\n",
-    "        )\n",
-    "        texts.append(text)\n",
-    "    return texts\n",
+    "FINANCIAL_KEYS = {\"revenue\", \"net_income\", \"operating_income\", \"total_assets\", \"cash_and_equivalents\", \"diluted_eps\", \"value\", \"unit\"}\n",
+    "WEIGHTS = {\"json_key\": 2.0, \"number\": 1.5, \"json_structure\": 1.2, \"default\": 1.0}\n",
     "\n",
-    "# Training configuration\n",
+    "class CustomFinancialTrainer(SFTTrainer):\n",
+    "    def __init__(self, *args, **kwargs):\n",
+    "        super().__init__(*args, **kwargs)\n",
+    "        tok = self.processing_class\n",
+    "        self.key_tokens = set(sum([tok.encode(f'\"{k}\"', add_special_tokens=False) + tok.encode(k, add_special_tokens=False) for k in FINANCIAL_KEYS], []))\n",
+    "        self.struct_tokens = set(sum([tok.encode(c, add_special_tokens=False) for c in '{}[]:\",'], []))\n",
+    "        self.digit_tokens = set(sum([tok.encode(d, add_special_tokens=False) for d in '0123456789.-'], []))\n",
+    "    \n",
+    "    def compute_loss(self, model, inputs, return_outputs=False, num_items_in_batch=None):\n",
+    "        labels = inputs.get(\"labels\", inputs[\"input_ids\"].clone())\n",
+    "        outputs = model(**inputs)\n",
+    "        logits = outputs.logits[..., :-1, :].contiguous()\n",
+    "        shift_labels = labels[..., 1:].contiguous()\n",
+    "        \n",
+    "        weights = torch.ones_like(shift_labels, dtype=torch.float32)\n",
+    "        for b in range(shift_labels.shape[0]):\n",
+    "            for i in range(shift_labels.shape[1]):\n",
+    "                lid = shift_labels[b,i].item()\n",
+    "                if lid == -100: weights[b,i] = 0.0\n",
+    "                elif lid in self.key_tokens: weights[b,i] = WEIGHTS[\"json_key\"]\n",
+    "                elif lid in self.struct_tokens: weights[b,i] = WEIGHTS[\"json_structure\"]\n",
+    "                elif lid in self.digit_tokens: weights[b,i] = WEIGHTS[\"number\"]\n",
+    "        weights = weights.to(logits.device)\n",
+    "        \n",
+    "        loss = torch.nn.CrossEntropyLoss(reduction='none')(logits.view(-1, logits.size(-1)), shift_labels.view(-1))\n",
+    "        mask = weights.view(-1) > 0\n",
+    "        loss = (loss * weights.view(-1))[mask].sum() / weights.view(-1)[mask].sum() if mask.sum() > 0 else loss.sum()\n",
+    "        return (loss, outputs) if return_outputs else loss\n",
+    "\n",
+    "print(\"CustomFinancialTrainer ready\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "training_args = SFTConfig(\n",
-    "    output_dir=\"./outputs\",\n",
-    "    per_device_train_batch_size=2,\n",
-    "    gradient_accumulation_steps=4,\n",
-    "    warmup_steps=5,\n",
-    "    num_train_epochs=3,\n",
-    "    learning_rate=2e-4,\n",
-    "    fp16=True,\n",
-    "    logging_steps=1,\n",
-    "    save_strategy=\"epoch\",\n",
-    "    optim=\"adamw_8bit\",\n",
-    "    weight_decay=0.01,\n",
-    "    lr_scheduler_type=\"linear\",\n",
-    "    seed=42,\n",
-    "    max_seq_length=MAX_SEQ_LENGTH,\n",
-    "    packing=False,\n",
+    "    output_dir=\"./outputs\", per_device_train_batch_size=2, gradient_accumulation_steps=4,\n",
+    "    warmup_steps=5, num_train_epochs=3, learning_rate=2e-4, fp16=True,\n",
+    "    logging_steps=1, save_strategy=\"epoch\", optim=\"adamw_8bit\",\n",
+    "    weight_decay=0.01, lr_scheduler_type=\"linear\", seed=42,\n",
+    "    max_seq_length=MAX_SEQ_LENGTH, packing=False, dataset_text_field=\"text\",\n",
     ")\n",
     "\n",
-    "trainer = SFTTrainer(\n",
-    "    model=model,\n",
-    "    tokenizer=tokenizer,\n",
-    "    train_dataset=dataset,\n",
-    "    args=training_args,\n",
-    "    formatting_func=formatting_func,\n",
-    ")\n",
-    "\n",
-    "print(\"Trainer configured\")"
+    "trainer = CustomFinancialTrainer(model=model, tokenizer=tokenizer, train_dataset=dataset, args=training_args)\n",
+    "trainer.train()\n",
+    "print(\"Training complete!\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Train!"
+    "## 8. Save MERGED Model (for MLX compatibility)\n",
+    "\n",
+    "**Important**: This saves a merged 16-bit model that works with MLX-LM on Apple Silicon."
    ]
   },
   {
@@ -219,34 +218,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer_stats = trainer.train()\n",
-    "print(f\"Training complete! Final loss: {trainer_stats.training_loss:.4f}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 8. Save Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save LoRA adapter\n",
+    "# Save merged model in 16-bit (compatible with MLX)\n",
+    "SAVE_PATH = \"./outputs/qwen3-8b-financial-merged\"\n",
+    "\n",
+    "model.save_pretrained_merged(\n",
+    "    SAVE_PATH,\n",
+    "    tokenizer,\n",
+    "    save_method=\"merged_16bit\",\n",
+    ")\n",
+    "print(f\"Merged model saved to {SAVE_PATH}\")\n",
+    "\n",
+    "# Also save just the adapter (smaller, for reference)\n",
     "model.save_pretrained(\"./outputs/qwen3-8b-financial-lora\")\n",
     "tokenizer.save_pretrained(\"./outputs/qwen3-8b-financial-lora\")\n",
-    "print(\"Model saved to ./outputs/qwen3-8b-financial-lora\")"
+    "print(\"LoRA adapter also saved\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9. Download Model (Optional)"
+    "## 9. Download MERGED Model"
    ]
   },
   {
@@ -255,18 +247,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Zip and download the adapter\n",
-    "!zip -r qwen3-financial-lora.zip ./outputs/qwen3-8b-financial-lora\n",
+    "# Zip the MERGED model (larger but works with MLX)\n",
+    "!zip -r qwen3-financial-merged.zip ./outputs/qwen3-8b-financial-merged\n",
     "\n",
     "from google.colab import files\n",
-    "files.download('qwen3-financial-lora.zip')"
+    "files.download('qwen3-financial-merged.zip')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10. Test Inference"
+    "## 10. Test"
    ]
   },
   {
@@ -275,48 +267,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Enable inference mode\n",
     "FastLanguageModel.for_inference(model)\n",
-    "\n",
-    "# Test prompt\n",
-    "test_messages = [\n",
-    "    {\"role\": \"system\", \"content\": \"Extract financial metrics as JSON.\"},\n",
-    "    {\"role\": \"user\", \"content\": \"Revenue: $100 million. Net Income: $10 million. Total Assets: $500 million.\"}\n",
-    "]\n",
-    "\n",
-    "inputs = tokenizer.apply_chat_template(\n",
-    "    test_messages,\n",
-    "    tokenize=True,\n",
-    "    add_generation_prompt=True,\n",
-    "    return_tensors=\"pt\"\n",
-    ").to(model.device)\n",
-    "\n",
-    "outputs = model.generate(\n",
-    "    input_ids=inputs,\n",
-    "    max_new_tokens=256,\n",
-    "    temperature=0.1,\n",
-    ")\n",
-    "\n",
-    "response = tokenizer.decode(outputs[0][inputs.shape[1]:], skip_special_tokens=True)\n",
-    "print(\"Model output:\")\n",
-    "print(response)"
+    "msgs = [{\"role\": \"system\", \"content\": \"Extract financial metrics as JSON.\"}, {\"role\": \"user\", \"content\": \"Revenue: $100M. Net Income: $10M. /no_think\"}]\n",
+    "inputs = tokenizer.apply_chat_template(msgs, tokenize=True, add_generation_prompt=True, return_tensors=\"pt\").to(model.device)\n",
+    "out = model.generate(input_ids=inputs, max_new_tokens=256, temperature=0.1)\n",
+    "print(tokenizer.decode(out[0][inputs.shape[1]:], skip_special_tokens=True))"
    ]
   }
  ],
  "metadata": {
   "accelerator": "GPU",
-  "colab": {
-   "gpuType": "T4",
-   "provenance": []
-  },
-  "kernelspec": {
-   "display_name": "Python 3",
-   "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.10.0"
-  }
+  "colab": {"gpuType": "T4"},
+  "kernelspec": {"display_name": "Python 3", "name": "python3"}
  },
  "nbformat": 4,
  "nbformat_minor": 0
