feat: Enable Unsloth logits for custom loss and streamline model generation parameters.

--- a/colab_finetune.ipynb
+++ b/colab_finetune.ipynb
@@ -139,8 +139,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import torch\n",
     "from trl import SFTTrainer, SFTConfig\n",
+    "\n",
+    "# CRITICAL: Enable logits for custom loss (Unsloth disables by default since Nov 2024)\n",
+    "os.environ['UNSLOTH_RETURN_LOGITS'] = '1'\n",
     "\n",
     "FINANCIAL_KEYS = {\"revenue\", \"net_income\", \"operating_income\", \"total_assets\", \"cash_and_equivalents\", \"diluted_eps\", \"value\", \"unit\"}\n",
     "WEIGHTS = {\"json_key\": 2.0, \"number\": 1.5, \"json_structure\": 1.2, \"default\": 1.0}\n",
@@ -174,7 +178,7 @@
     "        loss = (loss * weights.view(-1))[mask].sum() / weights.view(-1)[mask].sum() if mask.sum() > 0 else loss.sum()\n",
     "        return (loss, outputs) if return_outputs else loss\n",
     "\n",
-    "print(\"CustomFinancialTrainer ready\")"
+    "print(\"CustomFinancialTrainer ready (logits enabled)\")"
    ]
   },
   {
@@ -207,9 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8. Save MERGED Model (for MLX compatibility)\n",
-    "\n",
-    "**Important**: This saves a merged 16-bit model that works with MLX-LM on Apple Silicon."
+    "## 8. Save MERGED Model (for MLX compatibility)"
    ]
   },
   {
@@ -218,7 +220,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save merged model in 16-bit (compatible with MLX)\n",
     "SAVE_PATH = \"./outputs/qwen3-8b-financial-merged\"\n",
     "\n",
     "model.save_pretrained_merged(\n",
@@ -228,7 +229,7 @@
     ")\n",
     "print(f\"Merged model saved to {SAVE_PATH}\")\n",
     "\n",
-    "# Also save just the adapter (smaller, for reference)\n",
+    "# Also save adapter\n",
     "model.save_pretrained(\"./outputs/qwen3-8b-financial-lora\")\n",
     "tokenizer.save_pretrained(\"./outputs/qwen3-8b-financial-lora\")\n",
     "print(\"LoRA adapter also saved\")"
@@ -238,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9. Download MERGED Model"
+    "## 9. Download"
    ]
   },
   {
@@ -247,9 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Zip the MERGED model (larger but works with MLX)\n",
     "!zip -r qwen3-financial-merged.zip ./outputs/qwen3-8b-financial-merged\n",
-    "\n",
     "from google.colab import files\n",
     "files.download('qwen3-financial-merged.zip')"
    ]
@@ -277,8 +276,13 @@
  ],
  "metadata": {
   "accelerator": "GPU",
-  "colab": {"gpuType": "T4"},
-  "kernelspec": {"display_name": "Python 3", "name": "python3"}
+  "colab": {
+   "gpuType": "T4"
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "name": "python3"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 0
