--- a/colab_finetune.ipynb
+++ b/colab_finetune.ipynb
@@ -63,7 +63,7 @@
     "from unsloth import FastLanguageModel\n",
     "from unsloth.chat_templates import get_chat_template\n",
     "\n",
-    "MODEL_NAME = \"unsloth/Qwen3-8B-Instruct-unsloth-bnb-4bit\"\n",
+    "MODEL_NAME = \"unsloth/Qwen3\"\n",
     "MAX_SEQ_LENGTH = 8192\n",
     "\n",
     "model, tokenizer = FastLanguageModel.from_pretrained(\n",
@@ -205,72 +205,6 @@
     "trainer = CustomFinancialTrainer(model=model, tokenizer=tokenizer, train_dataset=dataset, args=training_args)\n",
     "trainer.train()\n",
     "print(\"Training complete!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 8. Save MERGED Model (for MLX compatibility)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SAVE_PATH = \"./outputs/qwen3-8b-financial-merged\"\n",
-    "\n",
-    "model.save_pretrained_merged(\n",
-    "    SAVE_PATH,\n",
-    "    tokenizer,\n",
-    "    save_method=\"merged_16bit\",\n",
-    ")\n",
-    "print(f\"Merged model saved to {SAVE_PATH}\")\n",
-    "\n",
-    "# Also save adapter\n",
-    "model.save_pretrained(\"./outputs/qwen3-8b-financial-lora\")\n",
-    "tokenizer.save_pretrained(\"./outputs/qwen3-8b-financial-lora\")\n",
-    "print(\"LoRA adapter also saved\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 9. Download"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!zip -r qwen3-financial-merged.zip ./outputs/qwen3-8b-financial-merged\n",
-    "from google.colab import files\n",
-    "files.download('qwen3-financial-merged.zip')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 10. Test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "FastLanguageModel.for_inference(model)\n",
-    "msgs = [{\"role\": \"system\", \"content\": \"Extract financial metrics as JSON.\"}, {\"role\": \"user\", \"content\": \"Revenue: $100M. Net Income: $10M. /no_think\"}]\n",
-    "inputs = tokenizer.apply_chat_template(msgs, tokenize=True, add_generation_prompt=True, return_tensors=\"pt\").to(model.device)\n",
-    "out = model.generate(input_ids=inputs, max_new_tokens=256, temperature=0.1)\n",
-    "print(tokenizer.decode(out[0][inputs.shape[1]:], skip_special_tokens=True))"
    ]
   }
  ],
